@@ -52,6 +52,7 @@ data_files = [('share/PyCF/',['data/ice.cpt',
                       'progs/extract3DProfile.py',
                       'progs/plotRSL.py',
                       'progs/plotRSLloc.py',
+                      'progs/plotRSLhist.py',
 		      'progs/extractCFstats.py',
                       'progs/ran_topo.py',
 		      'progs/extractTS.py',
